[ALL] fixed a rare bug, when artists would overlap in artists.html (via usage of mutex!); added jquery version of navbar listener (also fixed one minor bug here)

--- a/assets/css/artists.css
+++ b/assets/css/artists.css
@@ -3,7 +3,7 @@ html, body {
     padding: 0;
     overflow: visible;
     height: 100%;
-    background: url('../images/logo.svg'), #4CC9F0;
+    background: url('../images/logo.svg'), #3A0CA3;
     background-repeat: repeat;
     background-size: 10vmin;
 
@@ -19,12 +19,14 @@ body > .artist {
     top: -100vh;
 
     object-fit: scale-down;
-    transition: none;
+    transition: box-shadow 0.3s ease;
 
     background-color:#F72585;
     border-radius: 8px;
     overflow: hidden;
     width: 35vmin;
+
+
 
     & > img {
         border-top-left-radius: 8px;
@@ -48,13 +50,25 @@ body > .artist {
         transform: translate(-50%, -50%);
         z-index: 5;
 
-        width: 80vmin;
-
         transition: 
         top 0.3s ease, 
         left 0.3s ease, 
         transform 0.3s ease,
         width 0.3s ease, 
         height 0.3s ease;
+
+        box-shadow: 0 0px 32px rgba(0, 0, 0, 1);
+    }
+
+    &.unselected {
+        z-index: 4;
+        transition: 
+        top 0.3s ease, 
+        left 0.3s ease, 
+        transform 0.3s ease,
+        width 0.3s ease, 
+        height 0.3s ease;
+
+        box-shadow: 0 0px 32px rgba(0, 0, 0, 1);
     }
 }
