--- a/assets/css/lineup_container_element_dropdown.css
+++ b/assets/css/lineup_container_element_dropdown.css
@@ -37,6 +37,6 @@ div.clone {
         flex-direction: column-reverse;
     }
 
-    animation: grow_size 0.6s ease-out forwards;
-    box-shadow: 0 0px 32px rgba(0, 0, 0, 0.5);
+    animation: grow_size 0.6s ease-out forwards, box-shadow 0.6s ease;
+    box-shadow: 0 0px 32px rgba(0, 0, 0, 1);
 }
